had some differnet ideas, redoing everything

--- a/CSS/blog.css
+++ b/CSS/blog.css
@@ -1,57 +1,35 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,100&display=swap');
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
 }
 
-/* Header CSS */
-ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 20px;
+.btblog {
+    color: lightblue;
 }
-
-ul>li {
-    text-decoration: none;
-    list-style-type: none;
-}
-
-.blog-header {
-    font-size: 30px;
-    font-weight: bold;
-}
-
-
-/* main blog CSS */
 
 .container {
     display: grid;
-    height: 100vh;
     grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(6, 1fr);
-    grid-template-areas:
-        'top'
-        'md'
-        'bt'
-        'ft';
-    justify-content: center;
-    border: 5px solid red;
-    padding: 5px;
+
 }
 
+.author {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-.blogs {
-    border: 2px solid green;
-    padding: 15px;
 }
 
-/* single padding for blogs */
-
-.striking {
-    padding: 10px 0;
+.author-description {
+    text-align: center;
 }
 
-.randomP {
-    padding-top: 10px;
+.small-image {
+    width: 100px;
+    height: 50px;
+    background-color: grey;
+    border-radius: 50%;
+    text-align: center;
 }
